/*
 * java-tron is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * java-tron is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package protocol;

option java_package = "org.tron.protos"; //Specify the name of the package that generated the Java file
option java_outer_classname = "ShieldedTX"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

message Note {
  bytes value = 1;
  bytes d = 2;
  bytes pk_d = 3;
  bytes r = 4;
}

message SpendStatement {
  bytes ak = 1;
  bytes nsk = 2;
  Note note = 3;
  bytes alpha = 4;
  bytes anchor = 5;
  bytes witness = 6;
}

message OutputStatement {
  bytes esk = 1;
  Note note = 2;
}

message SpendStatement {
  bytes ak = 1;
  bytes nsk = 2;
  Note note = 3;
  bytes alpha = 4;
  bytes anchor = 5;
  bytes witness = 6;
}

message SpendDescription {
  bytes cv = 1;
  bytes anchor = 2;
  bytes nullifier = 3;
  bytes rk = 4;
  bytes zkproof = 5;
  bytes spendAuthSig = 6;
}

message OutputDescription {
  bytes cv = 1;
  bytes cm = 2;
  bytes epk = 3;
  bytes c_enc = 4;
  bytes c_out = 5;
  bytes zkproof = 6;
}

message ShieldedTransaction {
  repeated SpendDescription vShieldedSpend = 1;
  repeated OutputDescription vShieldedOutput = 2;
  bytes bindingSig = 3;
  bytes tFromAddress = 4;
  bytes tToAddress = 5;
}
